# my-coding-lab

./: .gitignore  README.md  README_template.md
backend/01_fastapi_inventory/: README.md  main.py  pyproject.toml  test_api.py
backend/02_ai_model_tutorial/backend/: .gitignore  config.py  db.py  gemini_client.py  main.py  pyproject.toml
backend/02_ai_model_tutorial/frontend/: index.html  package-lock.json  package.json
backend/02_ai_model_tutorial/frontend/src/: App.tsx  api.ts  index.css
backend/03_pydantic/: main.py  pyproject.toml  test_main.py
backend/03_pydantic/data/: data.json
java/01_hello_java/src/: Main.java
python/01_injection_example/: README.md  main.py  pyproject.toml
python/02_loot_ledger/: README.md  pyproject.toml
python/02_loot_ledger/src/loot_ledger/: __init__.py  event.py  event_store.py  inventory.py  item.py  projections.py
python/02_loot_ledger/test/: test_001.py  test_002.py
python/03_uv_packages/: README.md  pyproject.toml
snippets/: generics_01.py  matplot_sample_01.py  sample_requests.py
