[project]
name = "loot-ledger"
version = "0.1.0"
description = "An Event Sourcing example project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loot_ledger"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
